# fastapi-plugins

./: .gitignore  CHANGES.md  CHANGES.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _README.md  demo.py  docker-compose.memcached.yml  docker-compose.redis.yml  docker-compose.sentinel.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
_docker/: docker-compose.yml
_docker/sentinel/: Dockerfile  entrypoint.sh  sentinel.conf
alt_requirements/: requirements_core.txt  requirements_dev.txt  requirements_fakeredis.txt  requirements_full.txt  requirements_jobs.txt  requirements_logger.txt  requirements_memcached.txt  requirements_redis.txt  requirements_test.txt
docs/: cache.md  control.md  logger.md  scheduler.md  settings.md
fastapi_plugins/: __init__.py  _redis.py  control.py  logger.py  memcached.py  middleware.py  plugin.py  scheduler.py  settings.py  utils.py  version.py
scripts/: demo_app.py
tests/: __init__.py  conftest.py  test_control.py  test_logger.py  test_memcached.py  test_redis.py  test_scheduler.py  test_settings.py
